--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,6 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.DailyActivityRegister">
         <activity
             android:name=".MainActivity"
@@ -22,8 +25,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AddActivity"
-            android:label="Add Daily Activity" />
+            android:name=".AddProjectActivity"
+            android:label="Add New Project" />
+        <activity
+            android:name=".ProjectDashboardActivity"
+            android:label="Project Dashboard" />
     </application>
 
 </manifest>
