Hardcode port 8000 for Railway

--- a/backend/DailyActivityRegisterBackend/Dockerfile
+++ b/backend/DailyActivityRegisterBackend/Dockerfile
@@ -12,9 +12,8 @@ RUN pip install --no-cache-dir --upgrade pip && \
 # Copy application code
 COPY . .
 
-# Create a start script
-RUN echo '#!/bin/bash\nuvicorn scripts.main:app --host 0.0.0.0 --port ${PORT:-8000}' > /app/start.sh && \
-    chmod +x /app/start.sh
+# Expose port 8000
+EXPOSE 8000
 
-# Use shell to properly expand environment variables
-CMD ["/bin/bash", "/app/start.sh"]
+# Start uvicorn on port 8000
+CMD ["uvicorn", "scripts.main:app", "--host", "0.0.0.0", "--port", "8000"]
