Force rebuild - clear cache

--- a/backend/DailyActivityRegisterBackend/Dockerfile
+++ b/backend/DailyActivityRegisterBackend/Dockerfile
@@ -15,5 +15,5 @@ COPY . .
 # Expose port 8000
 EXPOSE 8000
 
-# Start uvicorn on port 8000
+# Start uvicorn on port 8000 (hardcoded for Railway)
 CMD ["uvicorn", "scripts.main:app", "--host", "0.0.0.0", "--port", "8000"]
