Firebase integration ready (requires Blaze plan) - saved for weekend

--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,9 @@ database_backups/
 # Build outputs
 build_output*.txt
 
+# Firebase
+firebase-backend/functions/node_modules/
+firebase-backend/.firebase/
+
+
 
