--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,126 @@
-# Android Studio
-.gradle
+# ===========================
+# Android Studio / Gradle
+# ===========================
+.gradle/
+.kotlin/
 /build/
 /captures/
-.DS_Store
+/app/release/
+/app/debug/
+/app/profile/
 /local.properties
 
-# IntelliJ
+# ===========================
+# IntelliJ IDEA
+# ===========================
 .idea/
 *.iml
 *.ipr
 *.iws
 
-# Keystore files
-*.jks
-*.keystore
-
-# Google Services
-google-services.json
-
-# Caches
-.cxx/
-*.bin
+# ===========================
+# Android Build Artifacts
+# ===========================
 *.apk
 *.ap_
 *.aab
+*.dex
+*.class
+.cxx/
+*.bin
 
+# ===========================
+# Keystore & Security
+# ===========================
+*.jks
+*.keystore
+google-services.json
+
+# ===========================
 # Crashlytics
+# ===========================
 com_crashlytics_export_strings.xml
 
-# Other
-/app/release/
-/app/debug/
-/app/profile/
-*.log
+# ===========================
+# Python Backend
+# ===========================
+# Virtual environments
+backend/DailyActivityRegisterBackend/venv/
+backend/DailyActivityRegisterBackend/.venv/
+backend/DailyActivityRegisterBackend/env/
+backend/DailyActivityRegisterBackend/.env
 
-# Documentation (local only)
+# Python cache
+backend/DailyActivityRegisterBackend/__pycache__/
+backend/DailyActivityRegisterBackend/**/__pycache__/
+backend/DailyActivityRegisterBackend/**/*.pyc
+backend/DailyActivityRegisterBackend/**/*.pyo
+backend/DailyActivityRegisterBackend/**/*.pyd
+
+# Python logs
+backend/DailyActivityRegisterBackend/*.log
+backend/DailyActivityRegisterBackend/logs/
+backend/DailyActivityRegisterBackend/app.log
+
+# Python backup files
+backend/DailyActivityRegisterBackend/*.backup
+backend/DailyActivityRegisterBackend/**/*.backup
+
+# ===========================
+# Firebase Backend (Node.js)
+# ===========================
+firebase-backend/functions/node_modules/
+firebase-backend/functions/.env
+firebase-backend/functions/.env.local
+firebase-backend/functions/npm-debug.log*
+firebase-backend/functions/yarn-debug.log*
+firebase-backend/functions/yarn-error.log*
+firebase-backend/functions/dist/
+firebase-backend/functions/lib/
+firebase-backend/.firebase/
+
+# ===========================
+# Logs (All)
+# ===========================
+*.log
+logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# ===========================
+# OS Files
+# ===========================
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
+
+# ===========================
+# Documentation (Local Only)
+# ===========================
 docs/
 
-# Development tools and scripts (local only)
+# ===========================
+# Development Tools & Scripts
+# ===========================
 dev-tools/
 backend/DailyActivityRegisterBackend/scripts/dev-scripts/
-backend/DailyActivityRegisterBackend/scripts/__pycache__/
 database_backups/
-
-# Build outputs
 build_output*.txt
 
+# ===========================
+# Environment Variables
+# ===========================
+.env
+.env.local
+.env.*.local
+
+# ===========================
+# Temporary Files
+# ===========================
+*.tmp
+*.temp
+.cache/
 
